--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">WirelessWhisper</string>
+    <string name="app_name">Wireless Whisper</string>
+    <string name="paired_devices">Paired devices</string>
+    <string name="scan_devices">Scan devices</string>
+    <string name="settings">Settings</string>
 </resources>
