--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Wireless Whisper</string>
+    <string name="device_details">Device details</string>
     <string name="paired_devices">Paired devices</string>
     <string name="scan_devices">Scan devices</string>
     <string name="settings">Settings</string>
+    <string name="name">Name</string>
+    <string name="mac_address">MAC Address</string>
+    <string name="scan">Scan</string>
+    <string name="main_screen">Home</string>
+    <string name="all_chats">All chats</string>
 </resources>
