--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="scan">Scan</string>
     <string name="main_screen">Home</string>
     <string name="all_chats">All chats</string>
+    <string name="pair_new_device">Pair new device</string>
 </resources>
