--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="disabled">Disabled</string>
     <string name="bluetooth">Bluetooth</string>
     <string name="main_settings">Main settings</string>
+    <string name="turn_on_discoverable">Turn on discoverable</string>
 </resources>
