--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="error_bluetooth_is_not_active">Bluetooth is not active</string>
     <string name="no_found_devices">No found devices</string>
     <string name="confirm">Confirm</string>
+    <string name="connect">Connect</string>
+    <string name="disconnect">Disconnect</string>
 </resources>
