--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="confirm">Confirm</string>
     <string name="connect">Connect</string>
     <string name="disconnect">Disconnect</string>
+    <string name="you_received_new_message">You received a new message</string>
 </resources>
