--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -15,6 +15,7 @@
     <string name="enabled">Włączony</string>
     <string name="disabled">Wyłączony</string>
     <string name="bluetooth">Bluetooth</string>
+    <string name="notifications">Powiadomienia</string>
     <string name="main_settings">Główne ustawienia</string>
     <string name="turn_on_discoverable">Włącz wykrywanie urządzenia</string>
     <string name="chat_is_active">Czat jest aktywny</string>
