--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="enabled">Enabled</string>
     <string name="disabled">Disabled</string>
     <string name="bluetooth">Bluetooth</string>
+    <string name="notifications">Notifications</string>
     <string name="main_settings">Main settings</string>
     <string name="turn_on_discoverable">Turn on discoverable</string>
     <string name="chat_is_active">Chat is active</string>
