--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="new_message">New message</string>
     <string name="choose">Choose</string>
     <string name="do_you_want_to_pair_this_device">Do you want to pair this device?</string>
+    <string name="are_you_sure_you_want_to_delete_this_device">Are you sure you want to delete this device?</string>
     <string name="no_found_devices">No found devices</string>
     <string name="confirm">Confirm</string>
     <string name="connect">Connect</string>
@@ -36,6 +37,7 @@
     <string name="error_could_not_close_the_connect_socket" translatable="false">Could not close the connect socket</string>
     <string name="error_couldnt_send_data_to_the_other_device" translatable="false">Couldn\'t send data to the other device</string>
     <string name="error_error_occured_when_sending_data" translatable="false">Error occurred when sending data</string>
+    <string name="error_device_is_not_connected">The device is not connected. Connect before you start the conversation.</string>
     <string name="start_bluetooth_server" translatable="false">Start Bluetooth server</string>
     <string name="connection_bluetooth_started_to" translatable="false">Connection bluetooth started to</string>
     <string name="bluetooth_service_activated" translatable="false">Bluetooth service activated</string>
@@ -43,4 +45,5 @@
     <string name="message_copied_to_clipboard">Message copied to clipboard</string>
     <string name="permission_is_needed_to_perform_the_action">Permission is needed to perform the action</string>
     <string name="connection_with_device_is_impossible">Connection with device is currently impossible</string>
+    <string name="delete_device">Delete device</string>
 </resources>
