--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -33,6 +33,7 @@
     <string name="connected_to">Połączony z</string>
     <string name="error_bluetooth_is_not_active">Bluetooth jest nieaktywny</string>
     <string name="error_device_is_not_connected">Urządzenie nie jest podłączone. Połącz się przed rozpoczęciem rozmowy.</string>
+    <string name="error_couldnt_send_data_to_the_other_device">Problem z wysłaniem wiadomości</string>
     <string name="received_message_is_encrypted_impossible_to_read">Otrzymana wiadomość jest zaszyfrowana nieznanym kluczem. Poproś nadawcę o wysłanie wiadomości ponownie.</string>
     <string name="message_copied_to_clipboard">Wiadomość skopiowana do schowka</string>
     <string name="permission_is_needed_to_perform_the_action">Pozwolenia są potrzebne do wykonania zadania.</string>
