--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="error_sockets_accept_method_failed" translatable="false">Socket\'s accept() method failed</string>
     <string name="error_bluetooth_server_closed" translatable="false">Bluetooth server closed</string>
     <string name="error_could_not_close_the_connect_socket" translatable="false">Could not close the connect socket</string>
-    <string name="error_couldnt_send_data_to_the_other_device" translatable="false">Couldn\'t send data to the other device</string>
+    <string name="error_couldnt_send_data_to_the_other_device">Couldn\'t send data to the other device</string>
     <string name="error_error_occured_when_sending_data" translatable="false">Error occurred when sending data</string>
     <string name="error_device_is_not_connected">The device is not connected. Connect before you start the conversation.</string>
     <string name="start_bluetooth_server" translatable="false">Start Bluetooth server</string>
